<resources>
    <string name="app_name">MOVIE42</string>
    <string name="back">BACK</string>
    <string name="pg">+13</string>
    <string name="label_text">Avengers: End Game</string>
    <string name="keywordsText">Action, Adventure, Fantasy</string>
    <string name="reviewsText">125 Reviews</string>
    <string name="storyLineHeadText">Storyline</string>
    <string name="descriptionText">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="castHeadText">Cast</string>
    <string name="lorem_reviews">125 Reviews</string>
    <string name="lorem_label">Avengers: End Game</string>
    <string name="lorem_movielengthtext">137MIN</string>
    <string name="lorem_pdmaintext">+13</string>
    <string name="lorem_keywordstext">Action, Adventure, Fantasy</string>
    <string name="nav_top_rated">Top Rated</string>
    <string name="nav_now_playing">Now Playing</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_popular">Popular</string>
    <string name="nav_up_coming">Up Coming</string>
    <string name="toolbar_search">Search</string>


    <string name="reviews">REVIEWS</string>


    <string name="top_rated">Top Rated</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="upcoming">Up Coming</string>
    <string name="movie_search">Movie Search</string>
    <string name="retry">Retry</string>
    <string name="channel_new_movie">New movie received</string>
    <string name="channel_new_movie_description">notify when new movie found in tops</string>
    <string name="notification_new_movie">New movie in top: </string>
    <string name="notification_add_to_calendar">Add to Calendar</string>
    <string name="main_item_transition">main_item_transition</string>


    <string name="movie_anim_transition_name">go_fuck_your_self_</string>
    <string name="details_transition">detailsTransition</string>
    <string name="movies_list_fragment">movies_list_fragment</string>
    <string name="settings">Settings</string>
    <string name="prefs_category_localization">Localization</string>
    <string name="prefs_data_language">Data Language</string>
    <string name="prefs_data_regions">Regions</string>
    <string name="prefs_pick_data_language">Pick data language</string>
    <string name="prefs_pick_region">Pick Region</string>
    <string name="connection_observer_restored">Connection restored</string>
    <string name="connection_observer_lost">Lost internet connection</string>
    <string name="movies_list_auto_update">Movies List Auto Update</string>


</resources>