<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:showIn="@layout/fragment_movies_details">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/pgText"
        style="@style/MovieItem.PG"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pg"

        android:textAppearance="@style/TextStyle"
        app:layout_constraintBottom_toTopOf="@id/labelText"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/labelText"
        style="@style/MovieItem.Label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLines="2"
        android:text="@string/label_text"

        android:textAppearance="@style/TextStyle"
        app:layout_constraintBottom_toTopOf="@+id/guideline_top"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/pgText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="115dp" />

    <TextView
        android:id="@+id/genresKeywordsText"
        style="@style/MovieItem.Keywords"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/keywordsText"
        android:textAppearance="@style/TextStyle"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/labelText" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/MovieItem.RatingBar"
        android:theme="@style/RatingBarColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:numStars="5"
        android:rating="4"
        android:stepSize="1"
        app:layout_constraintBottom_toTopOf="@id/storyLineHeadText"
        app:layout_constraintEnd_toStartOf="@id/reviewsText"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/genresKeywordsText" />

    <TextView
        android:id="@+id/reviewsText"
        style="@style/MovieItem.ReviewsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/reviewsText"
        android:textAppearance="@style/TextStyle"
        app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toEndOf="@+id/ratingBar"
        app:layout_constraintTop_toTopOf="@+id/ratingBar" />

    <TextView
        android:id="@+id/storyLineHeadText"
        style="@style/MovieItem.LineHeadText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/storyLineHeadText"
        android:textAppearance="@style/TextStyle"

        app:layout_constraintBottom_toTopOf="@id/descriptionText"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <TextView
        android:id="@+id/descriptionText"
        style="@style/MovieItem.StoryLineText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/descriptionText"
        android:textAppearance="@style/TextStyle"
        app:layout_constraintBottom_toTopOf="@id/castHeadText"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/storyLineHeadText" />

    <TextView
        android:id="@+id/castHeadText"
        style="@style/MovieItem.LineHeadText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/castHeadText"
        android:textAppearance="@style/TextStyle"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/recycleCast"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/descriptionText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleCast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:overScrollMode="never"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/castHeadText"
        tools:itemCount="2"
        tools:listitem="@layout/cast_item" />


</androidx.constraintlayout.widget.ConstraintLayout>