<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/movie_main_item_parent_margin_bottom"
    tools:ignore="SmallSp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MainItem.MaterialCardView"
        tools:ignore="HardcodedText">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainItemGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="8dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="8dp" />


            <ImageView
                android:id="@+id/imageMainItemView"
                android:layout_width="166dp"
                android:layout_height="248dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@id/labelMainText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/main_movie"
                tools:ignore="ContentDescription" />



            <View
                android:layout_width="166dp"
                android:layout_height="248dp"
                android:background="@drawable/shape"
                android:contentDescription="Movie Poster"
                app:layout_constraintBottom_toTopOf="@id/labelMainText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/keywordsText"
                style="@style/MainItem.Keywords"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/movie_main_item_keywordtext_margin_bottom"
                android:text="@string/lorem_keywordstext"
                app:layout_constraintBottom_toTopOf="@+id/ratingBar"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/guideline_center"
                tools:ignore="HardcodedText,SmallSp" />

            <com.grdk.ratingbarsvg.RatingBarSvg
                android:id="@+id/ratingBar"
                style="@style/MainItem.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:progressDrawable="@drawable/ratingbar_svg_selector_8"
                android:layout_marginBottom="@dimen/movie_main_item_ratingbar_margin_bottom"
                android:numStars="5"
                android:rating="5"
                android:stepSize="1"
                app:layout_constraintBottom_toBottomOf="@+id/imageMainItemView"
                app:layout_constraintEnd_toStartOf="@id/reviewsText"
                app:layout_constraintStart_toEndOf="@+id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/keywordsText" />


            <TextView
                android:id="@+id/reviewsText"
                style="@style/MainItem.ReviewsText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/movie_main_item_reviewstext_margin_start"
                android:text="@string/lorem_reviews"
                app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                app:layout_constraintStart_toEndOf="@+id/ratingBar"
                app:layout_constraintTop_toTopOf="@+id/ratingBar" />

            <TextView
                android:id="@+id/labelMainText"
                style="@style/MainItem.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lorem_label"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/imageMainItemView" />

            <TextView
                android:id="@+id/movieLengthText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto_black"
                android:text="@string/lorem_movielengthtext"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/movie_main_item_movielengthtext_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/labelMainText" />

            <ImageView
                android:id="@+id/favImageView"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="@dimen/movie_main_item_pgmaintext_favimageview_margin_top"
                android:foregroundGravity="top"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_favorite_false"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/pgMainText"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="@dimen/movie_main_item_pgmaintext_favimageview_margin_top"
                android:background="@drawable/card"
                android:fontFamily="@font/roboto_black"
                android:gravity="center"
                android:text="@string/lorem_pdmaintext"
                android:textColor="@color/base_text"
                android:textSize="@dimen/movie_main_item_pgmaintext_size"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="85dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>